# OS2mo-sd-connector

./: .gitlab-ci.yml  mkdocs.yml  mypy.ini  pyproject.toml  setup.py
docs/: index.md
docs/modules/: sd_soap_client.md
sd_connector/: __init__.py  cli.py  sd_connector.py  sd_soap_client.py
tests/: test_dummy.py
